<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/bacground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textGameAct1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textGameAct1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/textGameAct2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textGameAct2"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/textGameAct3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/textGameAct3"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/textGameAct4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:onClick="btnNextVopros"
            android:text="@string/textGameAct4"
            android:textColor="@color/bacground"
            android:background="@drawable/btn"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>