<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bacground"
    >
    <TextView
       android:id="@+id/textMainAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="36sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/textMainAct"
        android:layout_above="@+id/btnMainAct3">

        <TextView
            android:id="@+id/btnMainAct1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:onClick="btnMainAct1"
            android:padding="10dp"
            android:text="@string/startBTN"
            android:textColor="@color/bacground"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnMainAct2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:onClick="btnMainAct2"
            android:padding="10dp"
            android:text="@string/rulesBTN"
            android:textColor="@color/bacground"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnMainAct3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/btn_exit"
        android:gravity="center"
        android:onClick="btnMainAct3"
        android:padding="10dp"
        android:text="@string/exitBTN"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>